@@ -1,4 +1,4 @@
-# $NetBSD: xfree,v 1.7 2004/02/16 23:39:36 jlam Exp $
+# $NetBSD: xfree,v 1.8 2004/02/17 08:26:25 jlam Exp $
 #
 # The files listed below are the union of the sets of files installed by
 # the supported XFree distributions, minus the set of files representing
@@ -149,8 +149,6 @@ include/X11/Xaw/XawInit.h
 include/X11/Xcms.h
 include/X11/Xdefs.h
 include/X11/Xdmcp.h
-include/X11/Xft/Xft.h
-include/X11/Xft/XftCompat.h
 include/X11/Xft/XftFreetype.h
 include/X11/Xfuncproto.h
 include/X11/Xfuncs.h
@@ -494,20 +492,13 @@ lib/libXfontcache.a
 lib/libXfontcache.so
 lib/libXfontcache.so.1
 lib/libXfontcache.so.1.2
-lib/libXft.a
-lib/libXft.so
 lib/libXft.so.1
 lib/libXft.so.1.0
 lib/libXft.so.1.1
-lib/libXft.so.2
-lib/libXft.so.2.0
-lib/libXft.so.2.1
 lib/libXft.dylib
 lib/libXft.1.dylib
 lib/libXft.1.0.dylib
 lib/libXft.1.1.dylib
-lib/libXft.2.dylib
-lib/libXft.2.0.dylib
 lib/libXi.a
 lib/libXi.so
 lib/libXi.so.6
