@@ -1,0 +1,12 @@
+# $NetBSD$
+#
+include/X11/Xft/Xft.h
+include/X11/Xft/XftCompat.h
+lib/libXft.a
+lib/libXft.so
+lib/libXft.so.2
+lib/libXft.so.2.0
+lib/libXft.so.2.1
+lib/libXft.dylib
+lib/libXft.2.dylib
+lib/libXft.2.0.dylib
